Fix z-index issues.

--- a/v3/src/components/map/components/map-pin-layer.scss
+++ b/v3/src/components/map/components/map-pin-layer.scss
@@ -2,20 +2,18 @@
   height: 100%;
   position: absolute;
   width: 100%;
-  z-index: 10;
+  z-index: 12;
 
   .map-pin-overlay {
     height: 100%;
     position: absolute;
     width: 100%;
-    z-index: 11;
   }
 
   .map-pin {
     border: none;
     margin: 0;
     position: absolute;
-    z-index: 12;
 
     .selection-outline {
       fill: none;
