--- a/v3/src/components/map/components/pin-controls.scss
+++ b/v3/src/components/map/components/pin-controls.scss
@@ -4,7 +4,6 @@
   left: 10px;
   position: absolute;
   top: 90px;
-  z-index: 13;
 
   .map-control-button {
     align-items: center;
